@@ -22,6 +22,7 @@ version <next>:
 - median filter
 - QSV-accelerated VP9 encoding
 - AV1 encoding support via librav1e
+- AV1 frame merge bitstream filter
 
 
 version 4.2:
